# vlm-geometry-bench

./: .gitignore  CLAUDE.md  README.md  manual-test.cmd  pull-results.cmd  pyproject.toml  sync-results.cmd
.claude/: settings.local.json
docs/: ARCHITECTURE.md  BASELINE_RESULTS.md  PROJECT_TASKS.md  TESTING.md  USAGE.md  nas-setup.md
specs/: inital-spec.md  traceability-improvements.md
src/vlm_geometry_bench/: __init__.py  __main__.py  config.py  data_loader.py  evaluator.py  metrics.py  prompts.py  reporter.py  response_parser.py  vision_client.py
src/vlm_geometry_bench/traceability/: __init__.py  artifact_manager.py  html_generator.py  image_annotator.py  index_manager.py  schemas.py
tests/: __init__.py  test_cli.py  test_config.py  test_data_loader.py  test_metrics.py  test_response_parser.py  test_vision_client.py
tests/test_traceability/: __init__.py  test_artifact_manager.py  test_html_generator.py  test_image_annotator.py  test_index_manager.py  test_schemas.py
